syntax = "proto3";

package client_server.grpc.v1;

service Greeter {
  rpc SayHello (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
